--- a/SkyGreen-master/android/app/src/main/AndroidManifest.xml
+++ b/SkyGreen-master/android/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
 
    
     <application
-        android:label="sky_green"
+        android:label="books"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher"
         >
