--- a/SkyGreen-master/pubspec.yaml
+++ b/SkyGreen-master/pubspec.yaml
@@ -79,6 +79,7 @@ flutter:
     - assets/animations/
     - assets/a.jpg
     - assets/images/nn.jpg
+    - assets/images/default_image.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
